Update for megastructures

--- a/locale/pl/Factorissimo.cfg
+++ b/locale/pl/Factorissimo.cfg
@@ -1,12 +1,23 @@
 [entity-name]
 small-factory=Budynek Fabryki
+medium-factory=Budynek Fabryki MK2
+large-factory=Budynek Fabryki MK3
+huge-factory=Budynek Fabryki MK4
+
 small-power-plant=Budynek Elektrowni
+medium-power-plant=Budynek Elektrowni MK2
+large-power-plant=Budynek Elektrowni MK3
+huge-power-plant=Budynek Elektrowni MK4
 factory-power-provider=Dostawca energii elektrycznej
 factory-power-receiver=Obiornik energii elektrycznej
 factory-power-distributor=Dystrybutor energii elektrycznej
+factory-gate=Wyjście z budynku
 
 [technology-name]
 factory-architecture=Architektura Przemysłu
+factory-architecture-2=Zaawansowana Architektura Przemysłu
+factory-architecture-3=Konstrukcje Wielkowymiarowe
+factory-architecture-4=Megakonstrukcje
 
 [tile-name]
 factory-wall=Mury fabryczne
