Bigger & Better Buildings Initial Commit
Buildings moved to assembling-machine entity
 - Can be placed in N/S/E/W orientations
 - Pipes at connection points connect properly
Additional building sizes
 - Medium, Large, and Huge versions of buildings (up to 24X24)

 - Warning: save/load/preview factories tends to crash

--- a/locale/en/Factorissimo.cfg
+++ b/locale/en/Factorissimo.cfg
@@ -1,13 +1,23 @@
 [entity-name]
-small_factory=Factory building
-small_power_plant=Power plant building
+small-factory=Small factory building
+medium-factory=Medium factory building
+large-factory=Large factory building
+huge-factory=Huge factory building
+small-power-plant=Small power plant building
+medium-power-plant=Medium power plant building
+large-power-plant=Large power plant building
+huge-power-plant=Huge power plant building
 factory-power-transferrer=Factory power transceiver
 factory-power-distributor=Factory power distributor
 factory-chest-output=Factory output chest
 factory-chest-input=Factory input chest
+factory-gate=Factory exit
 
 [technology-name]
 factory-architecture=Architecture
+factory-architecture-2=Advanced Architecture
+factory-architecture-3=Large Scale Construction
+factory-architecture-4=Megastructures
 
 [tile-name]
 factory-wall=Factory wall
